Fix syntax error in loeschkonzept form

--- a/templates/loeschkonzept/edit.html.twig
+++ b/templates/loeschkonzept/edit.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>{% trans %}deletionConcept.edit</h1>
+    <h1>{% trans %}deletionConcept.edit{% endtrans %}</h1>
 
 
     {{ include('loeschkonzept/_form.html.twig', {'button_label': 'Update'}) }}
