--- a/templates/vvt/index.html.twig
+++ b/templates/vvt/index.html.twig
@@ -25,6 +25,7 @@
                     <th scope="col">{% trans from 'general' %}product{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}state{% endtrans %}</th>
                     <th scope="col">{% trans %}assessment{% endtrans %}</th>
+                    <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -46,6 +47,9 @@
                             {% endif %}
                         </td>
                         <td>| E: {{ v.beurteilungEintrittString }}<br>| S: {{ v.beurteilungSchadenString }}</td>
+                        <td{% if v.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
+                            {% if v.team != currentTeam %}{{ v.team }}{% else %}-{% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
