--- a/templates/datenweitergabe/edit.html.twig
+++ b/templates/datenweitergabe/edit.html.twig
@@ -8,8 +8,10 @@
         <a class="btn btn-amber ml-1 btn-sm" href="{{ path('bericht_weitergabe', {'id':daten.id, 'all':1}) }}">
             <span>{% trans from 'general' %}pdf.createWithHistory{% endtrans %}</span>
         </a>
-        {{ include('base/__approveBtn.html.twig',{'data':daten,'dataLink':'datenweitergabe_approve'}) }}
-        {{ include('base/__disableBtn.html.twig',{'data':daten,'dataLink':'datenweitergabe_disable'}) }}
+        {% if isEditable %}
+            {{ include('base/__approveBtn.html.twig',{'data':daten,'dataLink':'datenweitergabe_approve'}) }}
+            {{ include('base/__disableBtn.html.twig',{'data':daten,'dataLink':'datenweitergabe_disable'}) }}
+        {% endif %}
     {% endif %}
 {% endblock %}
 
@@ -20,7 +22,9 @@
             {{ include('base/__approvedBy.html.twig', {'data':daten}) }}
         </div>
         <div class="col-md-4 text-right">
-            {{ include('assign/__assign.html.twig',{'data':daten,'path':'assign_datenweitergabe'}) }}
+            {% if isEditable %}
+                {{ include('assign/__assign.html.twig',{'data':daten,'path':'assign_datenweitergabe'}) }}
+            {% endif %}
         </div>
     </div>
 
