--- a/templates/policies/index.html.twig
+++ b/templates/policies/index.html.twig
@@ -20,6 +20,7 @@
                     <th scope="col">{% trans %}scopes{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}processings{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}state{% endtrans %}</th>
+                    <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -31,6 +32,9 @@
                         <td>{% for p in d.processes | filter(p => p.activ) %}{{ p.name }}<br>{% endfor %}</td>
                         <td>{% if d.approved %}<span
                                     class="note-success p-1">{% trans from 'general' %}approved{% endtrans %}</span>{% else %}{{ d.statusString }}{% endif %}
+                        </td>
+                        <td{% if d.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
+                            {% if d.team != currentTeam %}{{ d.team }}{% else %}-{% endif %}
                         </td>
                     </tr>
                 {% endfor %}
