--- a/templates/software/index.html.twig
+++ b/templates/software/index.html.twig
@@ -24,6 +24,7 @@
                     <th scope="col">{% trans %}licence.word{% endtrans %}</th>
                     <th scope="col">{% trans %}expiration.date{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}state{% endtrans %}</th>
+                    <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -47,6 +48,9 @@
                             {% else %}
                                 {{ d.statusString }}
                             {% endif %}
+                        </td>
+                        <td{% if d.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
+                            {% if d.team != currentTeam %}{{ d.team }}{% else %}-{% endif %}
                         </td>
                     </tr>
                 {% endfor %}
