--- a/templates/vvt/index.html.twig
+++ b/templates/vvt/index.html.twig
@@ -26,6 +26,7 @@
                     <th scope="col">{% trans from 'general' %}state{% endtrans %}</th>
                     <th scope="col">{% trans %}assessment{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
+                    <th scope="col">{% trans from 'general' %}inheritance.isInherited{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -48,7 +49,12 @@
                         </td>
                         <td>| E: {{ v.beurteilungEintrittString }}<br>| S: {{ v.beurteilungSchadenString }}</td>
                         <td{% if v.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
-                            {% if v.team != currentTeam %}{{ v.team }}{% else %}-{% endif %}
+                            {% if v.team != currentTeam %}{{ v.team }}{% endif %}
+                        </td>
+                        <td>
+                            {% if v.team == currentTeam %}
+                                {% if v.inherited %}✅{% else %}❌{% endif %}
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
