--- a/templates/policies/index.html.twig
+++ b/templates/policies/index.html.twig
@@ -20,7 +20,7 @@
                     <th scope="col">{% trans %}scopes{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}processings{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}state{% endtrans %}</th>
-                    <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
+                    {% include 'base/__inheritanceTHeaders.html.twig' with {currentTeam:currentTeam} %}
                 </tr>
                 </thead>
                 <tbody>
@@ -33,9 +33,9 @@
                         <td>{% if d.approved %}<span
                                     class="note-success p-1">{% trans from 'general' %}approved{% endtrans %}</span>{% else %}{{ d.statusString }}{% endif %}
                         </td>
-                        <td{% if d.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
-                            {% if d.team != currentTeam %}{{ d.team }}{% else %}-{% endif %}
-                        </td>
+                        {% set inherited = policyInherited(d) %}
+                        {% set used = teamUsesPolicy(currentTeam, d) %}
+                        {% include 'base/__inheritanceTCols.html.twig' with {team:d.team, currentTeam:currentTeam, inherited:inherited, used:used} %}
                     </tr>
                 {% endfor %}
                 </tbody>
