--- a/templates/tom/index.html.twig
+++ b/templates/tom/index.html.twig
@@ -19,7 +19,7 @@
                     <th scope="col">{% trans from 'general' %}createdAt{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}title{% endtrans %}</th>
                     <th scope="col">{% trans from 'general' %}description{% endtrans %}</th>
-                    <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
+                    {% include 'base/__inheritanceTHeaders.html.twig' with {currentTeam:currentTeam} %}
                 </tr>
                 </thead>
                 <tbody>
@@ -30,9 +30,9 @@
                         <td>{{ t.createdAt|date('d.m.Y') }}</td>
                         <td>{{ t.titel }}</td>
                         <td>{{ t.beschreibung }}</td>
-                        <td{% if t.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
-                            {% if t.team != currentTeam %}{{ t.team }}{% else %}-{% endif %}
-                        </td>
+                        {% set inherited = tomInherited(t) %}
+                        {% set used = teamUsesTom(currentTeam, t) %}
+                        {% include 'base/__inheritanceTCols.html.twig' with {team:t.team, currentTeam:currentTeam, inherited:inherited, used:used} %}
                     </tr>
                 {% endfor %}
                 </tbody>
