--- a/templates/datenweitergabe/__indexTable.html.twig
+++ b/templates/datenweitergabe/__indexTable.html.twig
@@ -12,7 +12,7 @@
                 <th scope="col">{% trans from 'general' %}contact{% endtrans %}</th>
                 <th scope="col">{% trans from 'general' %}subscriptionDate{% endtrans %}</th>
                 <th scope="col">{% trans from 'general' %}approved{% endtrans %}</th>
-                <th scope="col">{% trans from 'general' %}inheritance.fromTeam{% endtrans %}</th>
+                {% include 'base/__inheritanceTHeaders.html.twig' with {currentTeam:currentTeam} %}
             </tr>
             </thead>
             <tbody>
@@ -25,9 +25,9 @@
                     <td>{{ t.kontakt.firma }} (id:{{ t.kontakt.id }})</td>
                     <td>{{ t.zeichnungsdatum|date('Y.m.d') }}</td>
                     <td>{{ t.approved?'yes':'no' | trans( [], 'general') }}</td>
-                    <td{% if t.team != currentTeam %} title="{% trans from 'general' %}inheritance.infoText{% endtrans %}"{% endif %}>
-                        {% if t.team != currentTeam %}{{ t.team }}{% else %}-{% endif %}
-                    </td>
+                    {% set inherited = transferInherited(t) %}
+                    {% set used = teamUsesTransfer(currentTeam, t) %}
+                    {% include 'base/__inheritanceTCols.html.twig' with {team:t.team, currentTeam:currentTeam, inherited:inherited, used:used} %}
                 </tr>
             {% endfor %}
             </tbody>
