--- a/templates/vvt/edit.html.twig
+++ b/templates/vvt/edit.html.twig
@@ -28,6 +28,9 @@
         <a class="btn btn-amber ml-1 btn-sm" href="{{ path('bericht_vvt', {'id':vvt.id, 'min':1}) }}">
             <span>{% trans %}pdf.createExternal{% endtrans %}</span>
         </a>
+        {% if not isEditable %}
+            {{ include('vvt/__ignoreInheritanceBtn.html.twig',{'process':vvt,'team':currentTeam}) }}
+        {% endif %}
         {% if isEditable %}
             {{ include('base/__approveBtn.html.twig',{'data':vvt,'dataLink':'vvt_approve'}) }}
             {{ include('base/__disableBtn.html.twig',{'data':vvt,'dataLink':'vvt_disable'}) }}
@@ -44,13 +47,15 @@
 
             {% if vvt.activDsfa is not null %}<h3 class="h3-responsive">{% trans %}dsfa.exists{% endtrans %}</h3>{% endif %}
         </div>
-
-        <div class="col-md-4 text-right">
-            {{ include('assign/__assign.html.twig',{'data':vvt,'path':'assign_vvt'}) }}
-        </div>
+        {% if isEditable %}
+            <div class="col-md-4 text-right">
+                {{ include('assign/__assign.html.twig',{'data':vvt,'path':'assign_vvt'}) }}
+            </div>
+        {% endif %}
     </div>
 
-
+    {% set used = vvt not in currentTeam.ignoredInheritances %}
+    {% include 'base/__inheritanceInfo.html.twig' with {team:vvt.team, currentTeam:currentTeam, used:used, inherited:vvt.inherited, domain:'vvt'} %}
 
     {{ include('vvt/__form.html.twig') }}
     <p>{% trans from 'general' %}createdBy{% endtrans %}: {{ vvt.user.email }}</p>
