--- a/templates/vvt/edit.html.twig
+++ b/templates/vvt/edit.html.twig
@@ -56,6 +56,7 @@
 
     {% set used = vvt not in currentTeam.ignoredInheritances %}
     {% include 'base/__inheritanceInfo.html.twig' with {team:vvt.team, currentTeam:currentTeam, used:used, inherited:vvt.inherited, domain:'vvt'} %}
+    {% include 'base/__flashMessage.html.twig' with {app:app} %}
 
     {{ include('vvt/__form.html.twig') }}
     <p>{% trans from 'general' %}createdBy{% endtrans %}: {{ vvt.user.email }}</p>
