--- a/templates/vvt/editDsfa.html.twig
+++ b/templates/vvt/editDsfa.html.twig
@@ -3,12 +3,15 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-md-8">
-            <h2 class="h2-responsive">{{ title }} {% trans from 'general' %}to{% endtrans%} {{ dsfa.vvt.name }}</h2>
+        <div class="col-md-6">
             <a href="{{ path('vvt_edit',{'id':dsfa.vvt.id}) }}" class="btn btn-sm btn-secondary">{% trans %}processing.back{% endtrans %}</a>
+            <h2 class="h2-responsive my-3">{{ title }} {% trans from 'general' %}to{% endtrans%} {{ dsfa.vvt.name }}</h2>
         </div>
-        <div class="col-md-4 text-right">
+        <div class="col-md-6 text-right">
             {% if assignForm is defined and isEditable %}{{ include('assign/__assign.html.twig',{'data':dsfa,'path':'assign_dsfa'}) }}{% endif %}
+        </div>
+        <div class="col-12">
+            {% include 'base/__flashMessage.html.twig' with {app:app} %}
         </div>
     </div>
 
